--- a/README.me
+++ b/README.me
@@ -1,4 +1,16 @@
 # Aplikacja wielowarstwowa
+Aplikacja ma za zadanie ułatwienie pracy recepcjonistom pracującym w małych
+salonach branży beauty ze szczególnym uwzględnieniem branży kosmetologicznej.
+Jej funkcje obejmować będą:
+● dodawanie klientów do bazy,
+● edycję danych klientów,
+● usuwanie klientów z bazy,
+● wprowadzanie zabiegów na listę,
+● edycję danych zabiegów,
+● usuwanie zapisanych zabiegów,
+● rejestrację wizyty klientów w salonie,
+● możliwość zmiany danych wizyty,
+● usuwanie wizyty z kalendarza.
 
 ## 1. Zespół 
 Zespoł składa się z dwóch osób:
